Fixed stretched diversity and sustainability and changed some minor text

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -550,6 +550,7 @@
         .corner-special{
           img{
             width: 1.2em;
+            height: 1.2em;
           }
         }
       }
